# microstrain-inertial

./: Cargo.toml  README.md
src/: lib.rs  parser.rs  serialize.rs
src/api/: mod.rs
src/api/data/: filter.rs  mod.rs  parse.rs  sensor.rs  shared.rs  types.rs
tests/: parsing_tests.rs  sensors_parsing_tests.rs
